# ros2-ws-template

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: ci.yml
docs/: architecture.md  conventions.md  dependency_graph.dot  hardware.md  lessons_learned.md  onboarding.md
schemas/: params.schema.json  plugin.schema.json  topic_naming.json  topic_naming.schema.json
scripts/: arch_check.py  generate_dep_graph.py  new_pkg.sh  validate_cross.py  validate_deps.py  validate_layers.py  validate_schema.py  validate_topic_names.py
src/robot_bringup/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_bringup/config/: system.yaml
src/robot_bringup/launch/: full_system.launch.py  sim.launch.py  test.launch.py
src/robot_common/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_common/include/robot_common/: math_utils.hpp  pid.hpp
src/robot_common/src/: pid.cpp
src/robot_common/test/: test_math_utils.cpp  test_pid.cpp
src/robot_control/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_control/config/: params.yaml
src/robot_control/include/robot_control/controller/: main_node.hpp
src/robot_control/include/robot_control/model/: errors.hpp  types.hpp
src/robot_control/include/robot_control/service/: safety_velocity.hpp
src/robot_control/launch/: robot_control.launch.py
src/robot_control/src/: main_node.cpp
src/robot_control/test/: test_safety_velocity.cpp
src/robot_hardware/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_hardware/config/: params.yaml
src/robot_hardware/include/robot_hardware/controller/: main_node.hpp
src/robot_hardware/include/robot_hardware/model/: errors.hpp  types.hpp
src/robot_hardware/include/robot_hardware/service/: differential_drive.hpp
src/robot_hardware/launch/: robot_hardware.launch.py
src/robot_hardware/src/: main_node.cpp
src/robot_hardware/test/: test_differential_drive.cpp
src/robot_msgs/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_msgs/action/: NavigateTo.action
src/robot_msgs/msg/: MotorState.msg  Obstacle.msg  ObstacleArray.msg  RobotStatus.msg
src/robot_msgs/srv/: EmergencyStop.srv  SetMode.srv
src/robot_perception/: CMakeLists.txt  package.xml  plugin.yaml
src/robot_perception/config/: params.yaml
src/robot_perception/include/robot_perception/controller/: main_node.hpp
src/robot_perception/include/robot_perception/model/: errors.hpp  types.hpp
src/robot_perception/include/robot_perception/service/: grid_cluster.hpp
src/robot_perception/launch/: robot_perception.launch.py
src/robot_perception/src/controller/: main_node.cpp
src/robot_perception/test/: test_grid_cluster.cpp
src/robot_perception_py/: package.xml  plugin.yaml  setup.cfg  setup.py
src/robot_perception_py/config/: params.yaml
src/robot_perception_py/launch/: robot_perception_py.launch.py
src/robot_perception_py/robot_perception_py/: __init__.py
src/robot_perception_py/robot_perception_py/controller/: __init__.py  main_node.py
src/robot_perception_py/robot_perception_py/model/: __init__.py  errors.py  types.py
src/robot_perception_py/robot_perception_py/service/: __init__.py  obstacle_extractor.py
src/robot_perception_py/test/: test_obstacle_extractor.py
templates/: COLCON_IGNORE
templates/new_bringup/: CMakeLists.txt  package.xml  plugin.yaml
templates/new_bringup/config/: params.yaml
templates/new_bringup/launch/: __PACKAGE_NAME__.launch.py
templates/new_library/: CMakeLists.txt  package.xml  plugin.yaml
templates/new_library/include/__PACKAGE_NAME__/: example.hpp
templates/new_library/src/: example.cpp
templates/new_library/test/: test_example.cpp
templates/new_msgs/: CMakeLists.txt  package.xml  plugin.yaml
templates/new_msgs/action/: Example.action
templates/new_msgs/msg/: Example.msg
templates/new_msgs/srv/: Example.srv
templates/new_node/: CMakeLists.txt  package.xml  plugin.yaml
templates/new_node/config/: params.yaml
templates/new_node/include/__PACKAGE_NAME__/controller/: main_node.hpp
templates/new_node/include/__PACKAGE_NAME__/model/: errors.hpp  types.hpp
templates/new_node/include/__PACKAGE_NAME__/service/: example_service.hpp
templates/new_node/launch/: __PACKAGE_NAME__.launch.py
templates/new_node/src/controller/: main_node.cpp
templates/new_node/test/: test_service.cpp
templates/new_node_py/: package.xml  plugin.yaml  setup.cfg  setup.py
templates/new_node_py/__PACKAGE_NAME__/: __init__.py
templates/new_node_py/__PACKAGE_NAME__/controller/: main_node.py
templates/new_node_py/__PACKAGE_NAME__/model/: __init__.py  errors.py  types.py
templates/new_node_py/__PACKAGE_NAME__/service/: __init__.py  example_service.py
templates/new_node_py/config/: params.yaml
templates/new_node_py/launch/: __PACKAGE_NAME__.launch.py
templates/new_node_py/test/: __init__.py  test_service.py
