<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.1.0</version>
  <description>控制：基于 PID 的避障速度调节，输出 cmd_vel</description>
  <maintainer email="dev@robot.lab">robot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_common</depend>
  <depend>robot_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
