<?xml version="1.0"?>
<package format="3">
  <name>robot_perception_py</name>
  <version>0.1.0</version>
  <description>感知：激光点质心提取，输出障碍物列表（Python 实现）</description>
  <maintainer email="dev@robot.lab">robot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
