<?xml version="1.0"?>
<package format="3">
  <name>__PACKAGE_NAME__</name>
  <version>0.1.0</version>
  <description>TODO: 公共消息/服务/动作定义</description>
  <maintainer email="TODO@todo.todo">TODO</maintainer>
  <license>TODO: 例如 MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
