<?xml version="1.0"?>
<package format="3">
  <name>__PACKAGE_NAME__</name>
  <version>0.1.0</version>
  <description>TODO: 一句话描述这个包的功能</description>
  <maintainer email="TODO@todo.todo">TODO</maintainer>
  <license>TODO: 例如 MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
