<?xml version="1.0"?>
<package format="3">
  <name>__PACKAGE_NAME__</name>
  <version>0.1.0</version>
  <description>TODO: 一句话描述这个包的功能</description>
  <maintainer email="TODO@todo.todo">TODO</maintainer>
  <license>TODO: 例如 MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
